--- a/MpAgencjaKidoTv/src/main/res/values/strings.xml
+++ b/MpAgencjaKidoTv/src/main/res/values/strings.xml
@@ -18,5 +18,12 @@
     <string name="video_thumb_image">video_thumb_image</string>
     <string name="error_player">Youtube player error</string>
     <string name="time">00:00</string>
+    <string name="title_activity_favorite_play_list_scene">FavoritePlayListScene</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="shadow">shadow</string>
+    <string name="search_icon">search_icon</string>
+    <string name="favorites_icon">favorites_icon</string>
+    <string name="progrestextview">0.00%</string>
 
 </resources>
