--- a/MpAgencjaKidoTv/src/main/res/values/strings.xml
+++ b/MpAgencjaKidoTv/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="price">price</string>
     <string name="monkey">monkey</string>
     <string name="search">Tap to search playlist</string>
+    <string name="tip_checkBox">Don\'t show again</string>
 
 </resources>
