--- a/MpAgencjaKidoTv/src/main/res/values/strings.xml
+++ b/MpAgencjaKidoTv/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="monkey">monkey</string>
     <string name="search">Tap to search playlist</string>
     <string name="tip_checkBox">Don\'t show again</string>
+    <string name="app_id">1417251308528260</string>
 
 </resources>
